fixed bug where cursor jumps to top when typing fast

--- a/src/components/Note/_note.scss
+++ b/src/components/Note/_note.scss
@@ -36,8 +36,7 @@
   font-family: inherit;
 }
 
-.ͼ15,
-.ͼ2 .cm-activeLine {
+.ͼ15 {
   background-color: default.$backgroundColor !important;
   color: default.$textColor !important;
 }
